samples/_failures_safe/1761406679_89791a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8418dbe4.c: In function ‘main’:
./samples/SAFE/__tmp_8418dbe4.c:149:13: error: expected declaration or statement at end of input
  149 |             fprintf(stderr, "Error: Invalid operation selection\n");
      |             ^~~~~~~
./samples/SAFE/__tmp_8418dbe4.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8418dbe4.c:149:13: error: expected declaration or statement at end of input
